--- a/style.css
+++ b/style.css
@@ -260,6 +260,26 @@ align-items: center;
     height: 100%;
     width: 50%;
 }
+.card2{
+    height: 150px;
+    width: 200px;
+    box-shadow: 2px 2px 15px black;
+    margin: 20px;
+    transition: 0.5s;
+  border-radius: 5px;
+}
+.card2 img{
+    width: 100%;
+    height: 100%;
+    transition: 0.4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+.card2 img:hover{
+filter: grayscale(1);
+}
 
 
 
